2004-05-22 arne

	* moved pBackgroundBitmap and its accessors into CView from CViewContainer, CFrame and CControl as suggested by Wolfram Franke
	* mac: added implementation for quartz CBitmap::CBitmap (CFrame &frame, long width, long height) 
	* windows: prevent a free memory read in UDropTarget::Release (submitted by Justin Caldicott)

2004-04-27 arne

	* changed CControlListener and added a method to intercept modifier clicks so the listener can decide if the control should handle
	  this click. This makes it easy to implement some kind of 'MIDI Learn' functionality.
	  Note: you need to implement this new method in your CControlListener, otherwise there will be compile errors. If you don't want 
	        this feature, just return 0.
	* changed all controls to support the new CControlListener method.
	* mac: bugfix for CTextEdit::takeFocus under quartz.
	* mac: changed fonts from arial to helvetica as on some OS X installations arial is not installed.
	
2004-04-17 arne

	* windows: support for alpha blended images like it is on Mac OS X with quartz
		   note: this implementation uses libpng (makro is USE_LIBPNG)
	* CDrawContext::setClipRect uses the offset now
	* COptionMenu::getSubMenu added
	* mac: fixed some quartz drawing stuff
	* mac: fix for CFrame::getPosition with quartz
	* mac: removed CARBON_EVENTS macro as it only works with QUARTZ
	
2004-04-11 arne
	
	* CViewContainer should be completely nestable now
	* mac: implemented the quartz offscreencontext for existing bitmaps
	
2004-03-23 arne

	* CTextEdit use the CParamDisplay::stringConvert functions to draw text
	* Fix of possible crash in CFileSelector::run
	* CFM Carbon plugs can now draw text antialiased even if the host does not support it
	(Thanks to Wolfram Franke for this stuff)

	* mac: added waitDoubleClick and waitDrag with carbon events

2004-03-19 arne

	* add CView::getFrameTopLeftPos method to get the topleft position of the view relative to the frame